use correct logo on mobile

--- a/src/assets/scss/argon-design-system/global.scss
+++ b/src/assets/scss/argon-design-system/global.scss
@@ -185,3 +185,8 @@
 .profile-page .card-profile .card-profile-image img {
     max-width: 15rem !important;
 }
+
+.logo-dark {
+    background-color: black;
+    padding: 0.5rem;
+}
