--- a/src/assets/scss/argon-design-system/navbar.scss
+++ b/src/assets/scss/argon-design-system/navbar.scss
@@ -320,7 +320,7 @@
 
         .collapse-brand {
             img {
-                height: 36px;
+                height: 4rem;
             }
         }
 
